Add container class to one element. Add custom css to one class.

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <div class="card bg-transparent">
             <div class="card-header" id="headingOne">
               <h2 class="mb-0">
-                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <button class="btn btn-link projectName" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   Real Estate Application
                 </button>
               </h2>
@@ -319,7 +319,7 @@
           <div class="card bg-transparent">
             <div class="card-header" id="headingTwo">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="btn btn-link collapsed projectName" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   Shared Trip Platform
                 </button>
               </h2>
@@ -333,7 +333,7 @@
           <div class="card bg-transparent">
             <div class="card-header" id="headingThree">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed projectName" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   Shop Application
                 </button>
               </h2>
@@ -348,7 +348,7 @@
       </section>
       </div>
 
-      <div class='text-center mt-5 mb-5'>
+      <div class='container text-center mt-5 mb-5'>
         <a class="btn btn-social btn-primary " href="https://github.com/ssavova" target="_blank">
           <span class="fa fa-github"></span> Keep up to date with at all current and future projects!
         </a>
