Change text to one button.

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
       <div class='container text-center mt-5 mb-5'>
         <a class="btn btn-social btn-primary " href="https://github.com/ssavova" target="_blank">
-          <span class="fa fa-github"></span> Keep up to date with at all current and future projects!
+          <span class="fa fa-github"></span> Current and future projects.
         </a>
       </div>
 
