Make image responsive.

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
       <!--Footer section-->
     
     <footer class="conatiner-fluid bg-primary text-center">
-      &copy; <img src="images/trial.PNG" id="footerImg">
+      &copy; <img src="images/trial.PNG" class="responsive" id="footerImg">
     </footer>
 
     <!--Bootstrap JS-->
