Add placeholders to input fields.

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                       <div class="col-md-12">
                         <div class="md-form mb-0">
                           <input id="subject" name="subject" type="text" value=""
-                           required minlength="3" placeholder="" class="form-control" />
+                           required minlength="3" placeholder="" class="form-control" placeholder="Please enter subject here ..." />
                            <label for="subject">Subject</label>
                         </div>
                       </div>
@@ -408,7 +408,7 @@
                       <div class="col-md-12">
                         <div class="md-form">
                           <textarea id="message" name="message" rows="3" class="form-control md-textarea" required minlength="20"
-                                    placeholder=""></textarea>
+                                    placeholder="Please enter text here..."></textarea>
                                     <label for="message">Your message</label>
                         </div>
                       </div>
