--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                       <div class="col-md-12">
                         <div class="md-form mb-0">
                           <input id="subject" name="subject" type="text" value=""
-                           required minlength="3" placeholder="" class="form-control" placeholder="Please enter subject here ..." />
+                           required minlength="3" placeholder="Please enter subject here..." class="form-control" />
                            <label for="subject">Subject</label>
                         </div>
                       </div>
