Fix regex for email input.

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                       
                       <div class="col-md-6">
                         <div class="md-form mb-0">
-                          <input id="email" name="email" type="email" required pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" value=""
+                          <input id="email" name="email" type="email" required pattern="/^[a-zA-Z0-9.!#$%&'*+\=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" value=""
                            required placeholder="Please enter your email..." class="form-control"/>
                            <label for="email">Your Email Address</label>
                         </div>
